# sporkel

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
deltagen/: CMakeLists.txt  base64.cpp  base64.h  deltacommon.cpp  deltacommon.h  deltagen.cpp  deltagen.h
ext/: CMakeLists.txt  bsdiff.cmake  bz2.cmake  cereal.cmake  libsodium.cmake  sodium.cmake
ext/boost/: CMakeLists.txt  filesystem.cmake  iostreams.cmake  program_options.cmake  system.cmake
ext/boost/iostreams_lzma/src/: lzma.cpp
ext/bsdiff/: bscommon.h  bsdiff.c  bspatch.c  bspatch.h  sais.c  sais.h
ext/libsodium_override/: runtime.h
ext/libsodium_override/sodium/: version.h
ext/lzma/: CMakeLists.txt
sporkel/: CMakeLists.txt
sporkel/include/: sporkel.h
sporkel/src/: common.h  create.cpp  crypto.cpp  keypair.cpp  patch.cpp  sign.cpp
util/: util.hpp
